AnaJV/OscarR - Only park car if parking has 20% availability or more
(cherry picked from commit 6c3bf5cc4f546e5665b97db1dcc5bb14eab0b3c9)